# wordle

./: .gitignore  README.md  constants.py  guesses.py  main.py  pyproject.toml  requirements.txt  wordle.py  words.py
src/: app.py  guesses.py  main.py  utils.py  wordle.py  words.py
src/templates/: lost.html  main.html  won.html
